exception handling & validations updates

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -18,6 +18,7 @@ a-5=Unauthorized access
 
 # Product messages
 pdm-1=Product not found
+pdm-2=Product with the given name already exists
 
 # Validation messages (auth + product)
 v-1=Username is required
@@ -33,7 +34,6 @@ v-10=Product price is required
 v-11=Price must be greater than 0
 v-12=Price must have max 8 digits and 2 decimals
 v-13=Quantity cannot be negative
-v-14=Category must not exceed 50 characters
 
 # General/system messages
 g-1=An internal server error occurred
