pagination & role-based access added

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -15,6 +15,7 @@ a-2=User with this username already exists
 a-3=Invalid or expired JWT token
 a-4=JWT token is missing
 a-5=Unauthorized access
+a-6=Access Denied
 
 # Product messages
 pdm-1=Product not found
